[gd_scene load_steps=5 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]
[ext_resource path="res://fonts/pixelate/SFPixelate-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sounds/heartSound.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]

size = 15
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Settings" type="Control"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 162.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="Panel" type="Panel" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = -1.0
margin_right = 739.0
margin_bottom = 306.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="GridContainer" type="GridContainer" parent="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_top = 31.0
margin_right = 377.0
margin_bottom = 138.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="KMute" type="Label" parent="Panel/GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 109.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "MUTE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VMute" type="CheckBox" parent="Panel/GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_right = 276.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="KEffects" type="Label" parent="Panel/GridContainer"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 109.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "EFFECTS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/GridContainer/KEffects"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Effects"

[node name="VEffects" type="HSlider" parent="Panel/GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 27.0
margin_right = 276.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -20.0
max_value = 0.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="KMusic" type="Label" parent="Panel/GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 109.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "MUSIC"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VMusic" type="HSlider" parent="Panel/GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 47.0
margin_right = 276.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -25.0
max_value = 0.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
editable = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="KFullscreen" type="Label" parent="Panel/GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 71.0
margin_right = 109.0
margin_bottom = 85.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "FULLSCREEN"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VFullscreen" type="CheckBox" parent="Panel/GridContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 113.0
margin_top = 67.0
margin_right = 276.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Back" type="Button" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 273.0
margin_top = 246.0
margin_right = 363.0
margin_bottom = 266.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BACK"
flat = false
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[connection signal="toggled" from="Panel/GridContainer/VMute" to="." method="_on_VMute_toggled"]

[connection signal="value_changed" from="Panel/GridContainer/VEffects" to="." method="_on_VEffects_value_changed"]

[connection signal="value_changed" from="Panel/GridContainer/VMusic" to="." method="_on_VMusic_value_changed"]

[connection signal="toggled" from="Panel/GridContainer/VFullscreen" to="." method="_on_VFullscreen_toggled"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


